--- a/notes-app-api/serverless.yml
+++ b/notes-app-api/serverless.yml
@@ -67,6 +67,39 @@ webpackIncludeModules: true
 functions:
   hello:
     handler: handler.hello
+  create:
+    handler: create.main
+    events:
+    - http:
+      path: notes
+      method: post
+      cors: true
+      authorizer:
+        arn: arn:aws:cognito-idp:us-west-2:491494138572:userpool/us-west-2_rpAJdjLR5  
+  get:
+    # Defines an HTTP API endpoint that calls the main function in get.js
+    # - path: url path is /notes/{id}
+    # - method: GET request
+    handler: get.main
+    events:
+      - http:
+          path: notes/{id}
+          method: get
+          cors: true
+          authorizer:
+            arn: arn:aws:cognito-idp:us-west-2:491494138572:userpool/us-west-2_rpAJdjLR5    
+  list:
+    # Defines an HTTP API endpoint that calls the main function in list.js
+    # - path: url path is /notes
+    # - method: GET request
+    handler: list.main
+    events:
+      - http:
+          path: notes
+          method: get
+          cors: true
+          authorizer:
+            arn: arn:aws:cognito-idp:us-west-2:491494138572:userpool/us-west-2_rpAJdjLR5             
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
@@ -108,3 +141,16 @@ functions:
 #     NewOutput:
 #       Description: "Description for the output"
 #       Value: "Some output value"
+
+iamRoleStatements:
+- Effect: Allow
+  Action:
+  - dynamodb:DescribeTable
+  - dynamodb:Query
+  - dynamodb:Scan
+  - dynamodb:GetItem
+  - dynamodb:PutItem
+  - dynamodb:UpdateItem
+  - dynamodb:DeleteItem
+  Resource: "arn:aws:dynamodb:us-west-2:*:*"
+
