--- a/notes-app-api/serverless.yml
+++ b/notes-app-api/serverless.yml
@@ -1,156 +1,111 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
-service: notes-app-api # NOTE: update this with your service name
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
-
-provider:
-  name: aws
-  runtime: nodejs6.10
-  stage: prod
-  region: us-west-2
-
-plugins:
-  - serverless-webpack
-
-custom:
-webpackIncludeModules: true
-
-
-
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
-
-# you can add statements to the Lambda function's IAM Role here
-#  iamRoleStatements:
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:ListBucket"
-#      Resource: { "Fn::Join" : ["", ["arn:aws:s3:::", { "Ref" : "ServerlessDeploymentBucket" } ] ]  }
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:PutObject"
-#      Resource:
-#        Fn::Join:
-#          - ""
-#          - - "arn:aws:s3:::"
-#            - "Ref" : "ServerlessDeploymentBucket"
-#            - "/*"
-
-# you can define service wide environment variables here
-#  environment:
-#    variable1: value1
-
-# you can add packaging information here
-#package:
-#  include:
-#    - include-me.js
-#    - include-me-dir/**
-#  exclude:
-#    - exclude-me.js
-#    - exclude-me-dir/**
-
-functions:
-  hello:
-    handler: handler.hello
-  create:
-    handler: create.main
-    events:
-    - http:
-      path: notes
-      method: post
-      cors: true
-      authorizer:
-        arn: arn:aws:cognito-idp:us-west-2:491494138572:userpool/us-west-2_rpAJdjLR5  
-  get:
-    # Defines an HTTP API endpoint that calls the main function in get.js
-    # - path: url path is /notes/{id}
-    # - method: GET request
-    handler: get.main
-    events:
-      - http:
-          path: notes/{id}
-          method: get
-          cors: true
-          authorizer:
-            arn: arn:aws:cognito-idp:us-west-2:491494138572:userpool/us-west-2_rpAJdjLR5    
-  list:
-    # Defines an HTTP API endpoint that calls the main function in list.js
-    # - path: url path is /notes
-    # - method: GET request
-    handler: list.main
-    events:
-      - http:
-          path: notes
-          method: get
-          cors: true
-          authorizer:
-            arn: arn:aws:cognito-idp:us-west-2:491494138572:userpool/us-west-2_rpAJdjLR5             
-
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
-
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
-
-iamRoleStatements:
-- Effect: Allow
-  Action:
-  - dynamodb:DescribeTable
-  - dynamodb:Query
-  - dynamodb:Scan
-  - dynamodb:GetItem
-  - dynamodb:PutItem
-  - dynamodb:UpdateItem
-  - dynamodb:DeleteItem
-  Resource: "arn:aws:dynamodb:us-west-2:*:*"
+{
+  "service": "notes-app-api",
+  "provider": {
+    "name": "aws",
+    "runtime": "nodejs6.10",
+    "stage": "prod",
+    "region": "us-west-2",
+    "deploymentBucket" : "awstutorial-notes-app-2"
+  },
+  "plugins": [
+    "serverless-webpack"
+  ],
+  "custom": null,
+  "webpackIncludeModules": true,
+  "functions": {
+    "hello": {
+      "handler": "handler.hello"
+    },
+    "create": {
+      "handler": "create.main",
+      "events": [
+        {
+          "http": {
+          "path": "notes",
+          "method": "post",
+          "cors": true,
+          "authorizer": {
+            "arn": "arn:aws:cognito-idp:us-west-2:491494138572:userpool/us-west-2_rpAJdjLR5"
+          } 
+         }
+        }
+      ]
+    },
+    "get": {
+      "handler": "get.main",
+      "events": [
+        {
+          "http": {
+            "path": "notes/{id}",
+            "method": "get",
+            "cors": true,
+            "authorizer": {
+              "arn": "arn:aws:cognito-idp:us-west-2:491494138572:userpool/us-west-2_rpAJdjLR5"
+            }
+          }
+        }
+      ]
+    },
+    "list": {
+      "handler": "list.main",
+      "events": [
+        {
+          "http": {
+            "path": "notes",
+            "method": "get",
+            "cors": true,
+            "authorizer": {
+              "arn": "arn:aws:cognito-idp:us-west-2:491494138572:userpool/us-west-2_rpAJdjLR5"
+            }
+          }
+        }
+      ]
+    },
+    "update": {
+      "handler": "update.main",
+      "events": [
+        {
+          "http": {
+            "path": "notes/{id}",
+            "method": "put",
+            "cors": true,
+            "authorizer": {
+              "arn": "arn:aws:cognito-idp:us-west-2:491494138572:userpool/us-west-2_rpAJdjLR5"
+            }
+          }
+        }
+      ]
+    },
+    "delete": {
+      "handler": "delete.main",
+      "events": [
+        {
+          "http": {
+            "path": "notes/{id}",
+            "method": "delete",
+            "cors": true,
+            "authorizer": {
+              "arn": "arn:aws:cognito-idp:us-west-2:491494138572:userpool/us-west-2_rpAJdjLR5"
+            }
+          }
+        }
+      ]
+    }
+  },
+  "iamRoleStatements": [
+    {
+      "Effect": "Allow",
+      "Action": [
+        "dynamodb:DescribeTable",
+        "dynamodb:Query",
+        "dynamodb:Scan",
+        "dynamodb:GetItem",
+        "dynamodb:PutItem",
+        "dynamodb:UpdateItem",
+        "dynamodb:DeleteItem"
+      ],
+      "Resource": "arn:aws:dynamodb:us-west-2:*:*"
+    }
+  ]
+}
 
