still trying to setup the API with AWS

--- a/notes-app-api/.babelrc
+++ b/notes-app-api/.babelrc
@@ -1,4 +1,4 @@
 {
-    "plugins": ["transform-runtime"],
-    "presets": ["react-app"]
+  "plugins": ["transform-runtime"],
+  "presets": ["react-app","es2015"]
 }
